@@ -58,6 +58,7 @@ S3method("[[", "pdf_doc")
 S3method("as.character", "Rd")
 
 S3method("format", "check_Rd_contents")
+S3method("format", "check_Rd_line_widths")
 S3method("format", "check_Rd_metadata")
 S3method("format", "check_Rd_xrefs")
 S3method("format", "check_T_and_F")
@@ -132,6 +133,7 @@ S3method("print", "PDF_Stream", .print.via.format)
 S3method("print", "PDF_String", .print.via.format)
 
 S3method("print", "check_Rd_contents", .print.via.format)
+S3method("print", "check_Rd_line_widths", .print.via.format)
 S3method("print", "check_Rd_metadata", .print.via.format)
 S3method("print", "check_Rd_xrefs", .print.via.format)
 S3method("print", "check_T_and_F", .print.via.format)
